# local-ai-advisor

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: homebrew-maintainer.md
scripts/: verify-release.sh
src/: advisor.rs  cache.rs  cli.rs  error.rs  hardware.rs  main.rs  models.rs  output.rs
src/sources/: huggingface.rs  mod.rs  ollama.rs  static_fallback.rs
tests/: cli.rs
